--- a/diapos_intro_r/pres.qmd
+++ b/diapos_intro_r/pres.qmd
@@ -23,20 +23,20 @@ format:
 
 ## Les logiciels d'analyse de données{.smaller}
 
-![](https://upload.wikimedia.org/wikipedia/commons/e/ea/SPSS_logo.svg){.absolute top=340 left=100 width="20%"}
+![](https://capsules-metho.github.io/diapos_intro_r/img/spss_logo.svg){.absolute top=340 left=100 width="20%"}
 
-![](https://upload.wikimedia.org/wikipedia/commons/7/79/Stata_logo_med_blue.png){.absolute top=150 left=800 width="20%"}
+![](https://capsules-metho.github.io/diapos_intro_r/img/stata_logo.png){.absolute top=150 left=800 width="20%"}
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/800px-Python-logo-notext.svg.png){.absolute top=400 left=800 width="20%"}
+![](https://capsules-metho.github.io/diapos_intro_r/img/python_logo.png){.absolute top=400 left=800 width="20%"}
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Julia_Programming_Language_Logo.svg/1024px-Julia_Programming_Language_Logo.svg.png){.absolute top=100 left=100 width="20%"}
+![](https://capsules-metho.github.io/diapos_intro_r/img/julia_logo.png){.absolute top=100 left=100 width="20%"}
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/1024px-R_logo.svg.png){.absolute top=200 left=330 width="40%"}
+![](https://capsules-metho.github.io/diapos_intro_r/img/r_logo.png){.absolute top=200 left=330 width="40%"}
 
 
 ## Pourquoi R?{.smaller}
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/1024px-R_logo.svg.png){.absolute top=0 left=800 width="20%"}
+![](https://capsules-metho.github.io/diapos_intro_r/img/r_logo.png){.absolute top=0 left=800 width="20%"}
 
 <br><br>
 
@@ -51,7 +51,7 @@ format:
 
 ## Pourquoi R?{.smaller}
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/1024px-R_logo.svg.png){.absolute top=0 left=800 width="20%"}
+![](https://capsules-metho.github.io/diapos_intro_r/img/r_logo.png){.absolute top=0 left=800 width="20%"}
 
 <br><br>
 
@@ -66,7 +66,7 @@ format:
 
 ## Pourquoi R?{.smaller}
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/1024px-R_logo.svg.png){.absolute top=0 left=800 width="20%"}
+![](https://capsules-metho.github.io/diapos_intro_r/img/r_logo.png){.absolute top=0 left=800 width="20%"}
 
 <br><br>
 
@@ -81,7 +81,7 @@ format:
 
 ## Pourquoi R?{.smaller}
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/1024px-R_logo.svg.png){.absolute top=0 left=800 width="20%"}
+![](https://capsules-metho.github.io/diapos_intro_r/img/r_logo.png){.absolute top=0 left=800 width="20%"}
 
 <br><br>
 
