--- a/diapos_analyse_r/pres.qmd
+++ b/diapos_analyse_r/pres.qmd
@@ -30,7 +30,7 @@ format:
 - Manipuler des données
 - Faire des graphques
 
-## Avant de commencer : Planifier avant de coder{.smaller} 
+## Avant de commencer : Planifier{.smaller} 
 
 #### La plus grosse erreur est de commencer à coder sans savoir ce que vous voulez faire
 
@@ -51,7 +51,6 @@ Les possibilités sont infinies, donc il est important de savoir où vous voulez
     - `nettoyage_donnees.R`
     - `graphique.R`
 - Chaque script doit être clair et facile à comprendre
-- Commenter votre code avec des `#`
 
 ## Avant de commencer : Le chemin d'arborescence{.smaller}
 
@@ -61,6 +60,15 @@ Les possibilités sont infinies, donc il est important de savoir où vous voulez
 
 ![](https://capsules-metho.github.io/diapos_intro_r/img/chemin_arbo.png){.absolute top=400 left=75 width="80%"}
 
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+**~/Dropbox/Conferences/FSS_2024/atelier_fss_2023_03_15/data/cleanCES2011_1.rds**
 
 ## Importer des données{.smaller}
 
